# harvard-cs50

./: pyproject.toml
src/: main.py
src/harvard_lectures/: dfs.py
src/harvard_lectures/propositional_logic/: knowledgebase.py
src/neural_net_youtube/: layer_dense_model.py  layer_numpy.py  softmax.py
src/neural_net_youtube/dataset/: data_generator.py
src/neural_net_youtube/numpy_examples/: implementing_loss.py  multi_layer.py  softmax.py
src/neural_net_youtube/vanilla_python_examples/: implementing_loss.py  layer_vanillapython.py  log_sample.py  softmax.py
